src/yaml/ingress/kop-ingress.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  labels:
    name: kube-oidc-proxy
  name: kube-oidc-proxy
  namespace: auth
spec:
  routes:
  - conditions:
    - prefix: /
    services:
    - name: kube-oidc-proxy
      port: 443
  tcpproxy:
    services:
    - name: kube-oidc-proxy
      port: 443
  virtualhost:
    fqdn: kube-oidc-proxy.INSERT_DOMAIN.HERE
    tls:
      passthrough: true
